@@ -170,7 +170,7 @@ $(document).ready(function() {
             max: 100,
               labels: {
                      formatter: function() {
-            if((this.value>=0)&&(this.value<=100)) {      
+ if((this.value>=0)&&(this.value<=100)) {      
                <?php if((strcmp($plugs_infos[$selected_plug-1]["PLUG_TYPE"],"lamp")==0)||(strcmp($plugs_infos[$selected_plug-1]["PLUG_TYPE"],"unknown")==0)) { ?>
                if(this.value==0) return '<?php echo __("VALUE_OFF"); ?>';
                if(this.value==100) return '<?php echo __("VALUE_ON"); ?>';
@@ -207,33 +207,13 @@ $(document).ready(function() {
       },
       tooltip: {
          formatter: function() {
-
-  <?php if((strcmp($plugs_infos[$selected_plug-1]["PLUG_TYPE"],"lamp")==0)||(strcmp($plugs_infos[$selected_plug-1]["PLUG_TYPE"],"unknown")==0)) { ?>
-      if(this.y == 99.9) {
-         return Highcharts.dateFormat('%H:%M:%S', this.x) +'<br /><p align=center><b><?php echo __("VALUE_ON"); ?></b></p>';
-      } else {
-         return Highcharts.dateFormat('%H:%M:%S', this.x) +'<br /><p align=center><b><?php echo __("VALUE_OFF"); ?></b></p>';
-      }
-<?php } else if((strcmp($plugs_infos[$selected_plug-1]["PLUG_TYPE"],"ventilator")==0)||(strcmp($plugs_infos[$selected_plug-1]["PLUG_TYPE"],"heating")==0)) { ?>
-      if(this.y == 99.9) {
+        if(this.y == 99.9) {
          return Highcharts.dateFormat('%H:%M:%S', this.x) +'<br /><p align=center><b><?php echo __("CHART_FORCE_ON_VALUE"); ?></b></p>';
        } else if(this.y == 0) {
          return Highcharts.dateFormat('%H:%M:%S', this.x) +'<br /><p align=center><b><?php echo __("VALUE_OFF"); ?></b></p>';
             } else { 
          return Highcharts.dateFormat('%H:%M:%S', this.x) +'<br /><p align=center><b>'+this.y+'°C</b></p>';
       }   
-
-<?php } else if((strcmp($plugs_infos[$selected_plug-1]["PLUG_TYPE"],"humidifier")==0)||(strcmp($plugs_infos[$selected_plug-1]["PLUG_TYPE"],"dehumidifier")==0)) { ?>
-       if(this.y == 99.9) {
-      return Highcharts.dateFormat('%H:%M:%S', this.x) +'<br /><p align=center><b><?php echo __("CHART_FORCE_ON_VALUE"); ?></b></p>';
-       } else if(this.y == 0) {
-      return Highcharts.dateFormat('%H:%M:%S', this.x) +'<br /><p align=center><b><?php echo __("VALUE_OFF"); ?></b></p>';
-       } else { 
-      return Highcharts.dateFormat('%H:%M:%S', this.x) +'<br /><p align=center><b>'+this.y+'%</b></p>';
-       }
-<?php } else { ?>
-      return Highcharts.dateFormat('%H:%M:%S', this.x) +'<br /><p align=center><b>'+this.y+'</b></p>';
-<?php } ?>
 
          }
       },
@@ -296,12 +276,19 @@ $(document).ready(function() {
 <tr>
      <td></td>
      <td><?php echo __('VALUE_ON_OFF'); ?>:</td>
-     <td><?php if((strcmp($plugs_infos[$selected_plug-1]["PLUG_TYPE"],"lamp")==0)||(strcmp($plugs_infos[$selected_plug-1]["PLUG_TYPE"],"unknown")==0)) { ?><select id="value_program" name="value_program"> <option value="on" <?php if($value_program==1) { ?>selected<?php } ?>><?php echo __('VALUE_ON'); ?></option><option value="off" <?php if($value_program==0) { ?>selected<?php } ?>><?php echo __('VALUE_OFF'); ?></option></select><?php } else { ?>
-                       <select id="regul_program" name="regul_program" onChange="getRegulation(this.selectedIndex);" onLoad="getRegulation(this.selectedIndex);">
-                             <option value="regul" <?php if(strcmp("$regul_program","regul")==0) { ?>selected<?php } ?>><?php echo __('VALUE_REGUL'); ?></option>
+     <td><?php if((strcmp($plugs_infos[$selected_plug-1]["PLUG_TYPE"],"lamp")==0)||(strcmp($plugs_infos[$selected_plug-1]["PLUG_TYPE"],"unknown")==0)) { ?>
+            <select id="regul_program" name="regul_program"> 
+                <option value="on" <?php if(strcmp("$regul_program","on")==1) { ?>selected<?php } ?>><?php echo __('VALUE_ON'); ?></option>
+                <option value="off" <?php if(strcmp("$regul_program","off")==0) { ?>selected<?php } ?>><?php echo __('VALUE_OFF'); ?></option>
+            </select>
+            <?php } else { ?>
+             <select id="regul_program" name="regul_program" onChange="getRegulation(this.selectedIndex);" onLoad="getRegulation(this.selectedIndex);">
+                 <option value="regul" <?php if(strcmp("$regul_program","regul")==0) { ?>selected<?php } ?>><?php echo __('VALUE_REGUL'); ?></option>
 			     <option value="on" <?php if(strcmp("$regul_program","on")==0) { ?>selected<?php } ?>><?php echo __('VALUE_ON'); ?></option>
-                             <option value="off" <?php if(strcmp("$regul_program","off")==0) { ?>selected<?php } ?>><?php echo __('VALUE_OFF'); ?></option>
-                       </select></td>
+                 <option value="off" <?php if(strcmp("$regul_program","off")==0) { ?>selected<?php } ?>><?php echo __('VALUE_OFF'); ?></option>
+            </select>
+            <?php } ?>
+    </td>
     <td></td>
 </tr>
 <tr>
@@ -324,7 +311,7 @@ $(document).ready(function() {
                         } ?> />
                                                 <?php if((strcmp($plugs_infos[$selected_plug-1]['PLUG_TYPE'],"heating")==0)||(strcmp($plugs_infos[$selected_plug-1]['PLUG_TYPE'],"ventilator")==0)) echo "°C"; ?>
                   <?php if((strcmp($plugs_infos[$selected_plug-1]['PLUG_TYPE'],"humidifier")==0)||(strcmp($plugs_infos[$selected_plug-1]['PLUG_TYPE'],"dehumidifier")==0)) echo "%"; ?>
-               </div><?php } ?>
+               </div>
     </td>
     <td><?php if((isset($error['value']))&&(!empty($error['value']))) echo "<div class='error'>".$error['value']."</div>"; ?></td>
 </tr>
